[package]
name = "minesweep-r"
version = "0.1.0"
authors = ["Petr Gladkikh <petrglad@gmail.com>"]
description = "A solver for Minesweeper game"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
ansi_term = "0.12.1"
ansi-escapes = "0.1.0"
